# objects_recognition

./: CMakeLists.txt  README.md
src/: pcl_test.cpp
